--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "consultorio",
   "version": "0.1.0",
   "private": true,
-  "homepage":"http://TITO30.github.io/consultorio",
+  "homepage":"http://TITO30.github.io/consultorio/",
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
